0.6.8, bugfix - fixed mobile input form viewport bleed

--- a/style/chatapp.scss
+++ b/style/chatapp.scss
@@ -11,24 +11,6 @@
 // * {
 //   outline: 2px dotted red;
 // }
-// .app-wrapper {
-//   outline: 3px solid red;
-// }
-// .message-section {
-//   outline: 5px dotted red;
-// }
-
-// .messages {
-//   outline: 2px dotted green;
-// }
-// .message-form {
-//   outline: 2px dotted red;
-// }
-// .emoji-picker,
-// .emoji-picker-btn,
-// .message-form__button {
-//   outline: 2px dotted purple;
-// }
 
 //-----------------------
 // GENERAL
@@ -68,7 +50,6 @@ body {
 // ONLINE SECTION
 //-----------------------
 .online-section {
-  // height: calc(100% - 50px);
   @include position-fixed-bleedfix;
   height: 100%;
   width: 0px; // responsive
@@ -112,19 +93,17 @@ body {
   width: 100%;
   z-index: 1;
   min-height: 0;
-  outline: 2px solid red;
   overflow: hidden;
   transition: all 4.5s ease;
 }
-/* 3rd row div, where msgs go */
+
 .messages {
   display: flex;
   flex-direction: column-reverse;
   overflow-y: auto;
   height: calc(100% - 40px);
   transition: $transition-02;
-  flex-shrink: 1; //is this needed
-  // padding-bottom: 50px; // accounts for fixed input msg area
+  // flex-shrink: 1; //is this needed
 }
 
 /* msg content (once any msgs exist) */
@@ -170,6 +149,7 @@ body {
 .font-awesome {
   cursor: pointer;
 }
+// Online counter has normal cursor
 .fa-users,
 .members-count {
   cursor: context-menu;
@@ -198,10 +178,6 @@ body {
   font-size: 18px;
   font-weight: bold;
 }
-.fa-paper-plane {
-  // padding-right: 30px;
-  // margin-right: 30px; // NO
-}
 #emoji-picker-btn {
   margin-right: 5px;
 }
@@ -210,7 +186,6 @@ body {
   border: 1px solid #16bb00;
   border-radius: 1.125rem;
   padding: 10px 15px;
-  // margin: 0 10px;
   font-size: 16px;
 }
 //----------------------------
@@ -218,9 +193,8 @@ body {
 //----------------------------
 .message-form {
   @include position-fixed-input; // fixes keyboard scroll
-  // padding: 5px 0;
   display: flex;
-  // flex-grow: 1;
+
   justify-content: center;
   align-items: center;
   align-self: center;
@@ -228,9 +202,6 @@ body {
   width: 100%;
   background-color: $clr-bk;
   z-index: 3;
-}
-.message-form * {
-  // border: 2px solid red;
 }
 
 //-----------------------
@@ -255,7 +226,7 @@ body {
 #emoji-picker.visible {
   height: 250px;
 }
-// single emoji div
+
 .emoji {
   @include flex-emoji-picker;
   background-color: rgba($color: #2f5679, $alpha: 0.5);
@@ -266,9 +237,7 @@ body {
   border-radius: 50%;
 
   &:hover {
-    // padding: 10px 1px;
     background: #1c2d3a;
-    // padding: 2px 2px;
   }
 }
 
